ATAPHtmlReport/report.css
/* ... */
.donut-chart .chart-center span {
	display: block;
	text-align: center;
	font-size: 40px;
	line-height: 150px;
	color: black;
}


#navigationButtons{
	margin-top: 15px;
	display: grid;
	grid-template-rows: 50px;
	grid-template-columns: repeat(6,160px);
}
button{
	margin-left: 10px;
	border-radius: 8px;
	font-weight: bold;
}

#riskScore{
	font-family: Arial, sans-serif;
	text-align: center;
}

#CISA {
	font-family: Arial, sans-serif;
}

#CISATable {
    margin-left: 10%;
    margin-right: 10%;
    width: 80%;
    border-collapse: collapse; 
    border: 1px solid #ffffff;
    font-family: Arial, sans-serif;
}

.CISAMitigations{
	width: 60%;
}

.CISAMitreTechniqueIDs{
	width: auto;
}

.CISAMitigationIDs{
	width: auto;
}

#CISATable a {
	color: #000000;
	text-decoration: none;
}

#CISAthead{
	border-bottom-width: 2px;
	background-color: lightgray;
	border: 1px solid #d2d2d2;
}

#CISAtbody tr:nth-child(even) {
	background-color: #efefef;
	border: 1px solid #d2d2d2;
}
#CISAtbody tr td {
	border: 1px solid #d2d2d2;
}

#MITRE {
    font-family: Arial, sans-serif;
}

#MITRETable {
	width: 100%;
	border-collapse: collapse; 
	border: 1px solid #ffffff;
	font-family: Arial, sans-serif;
	display: flex;
	flex-direction: column;
}

#MITREthead a {
	color: #000000;
	text-decoration: none;
	font-weight: bold;
}

#MITREtbody a {
	color: #000000;
	text-decoration: none;
}

#MITREtbody tr , #MITREthead tr {
	display: flex;
}

#MITREtbody td , #MITREthead td {
	min-width: 75px;
	border: 1px solid #cccccc;
	padding: 6px;
	flex: 1;
	flex-basis: 0;
}

#MITREthead td {
	overflow: hidden;
	overflow-wrap: break-word;
}

.MITRETechnique {
	padding: 6px;
    border: 1px solid #000000;
}

.empty{
	background-color:#a7a7a7;
	background-clip: border-box;
}

.hundred{
	background-color:#33cca6;
	background-clip: border-box;
}

.ninety{
	background-color:#52CC8F;
	background-clip: border-box;
}

.eighty{
	background-color:#70CC78;
	background-clip: border-box;
}

.seventy{
	background-color:#8FCC61;
	background-clip: border-box;
}

.sixty{
	background-color:#ADCC4A;
	background-clip: border-box;
}

.fifty{
	background-color:#CCCC33;
	background-clip: border-box;
}

.fourty{
	background-color:#CCA329;
	background-clip: border-box;
}

.thirty{
	background-color:#CC7A1F;
	background-clip: border-box;
}

.twenty{
	background-color:#CC5214;
	background-clip: border-box;
}

.ten{
	background-color:#CC290A;
	background-clip: border-box;
}

.zero{
	background-color:#cc0000;
	background-clip: border-box;
}

.tooltip {
	position: relative;
	display: inline-block;
	border-bottom: 1px dotted black;
}

.tooltip .tooltiptext {
	visibility: hidden;
	width: 120px;
	background-color: black;
	color: #fff;
	text-align: center;
	border-radius: 6px;
	padding: 5px 0;
  
	/* Position the tooltip */
	position: absolute;
	z-index: 1;
}

.tooltip:hover .tooltiptext {
	visibility: visible;
}

#Tip p{
	font-weight: bold;
	padding: 5px;
}

.square-container {
	display: flex;
	align-items: center;
	gap: 10px;
	margin-bottom: 10px;
}
.square {
    width: 20px;
    height: 20px;
    border: 1px solid black;
}

#SSquareSquare {
    background: #33cca6;
}

#FSquareSquare {
    background: #cc0000;
}

#GradientExSquare {
    background: linear-gradient(#33cca6,#cc0000);
}

#NoTestSquare {
    background: #a7a7a7;
}
 
#riskMatrixContainer{
	display: grid;
	position: relative;
	grid-template-columns: 100px repeat(5,60px);
	grid-template-rows: repeat(6,60px);
	left: 10%;
	float: left;
	margin-top: 50px;
	text-align: center;
}

#riskMatrixContainer div{
	border: 1px solid black;
}


#severity{
	grid-column-start: 1;
	grid-column-end: 2;
	grid-row-start: 1;
	grid-row-end: 7;
	position: relative;
}

#quantity{
	grid-column-start: 2;
	grid-column-end: 7;
	grid-row-start: 6;
	grid-row-end: 7;
	position: relative;
}

#severityArea{
	text-align: center;
	position: absolute;
	margin: 0;
	top:50%;
	left: 20%;
}

#quantityArea{
    text-align: center;
    position: absolute;
    margin: 0;
    top: 35%;
    left: 40%;
}

#severityCritical{
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 1;
	grid-row-end: 2;
	padding-top: 20px;
}

#severityHigh{
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 2;
	grid-row-end: 3;
	padding-top: 20px;
}

#severityMedium{
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 3;
	grid-row-end: 4;
	padding-top: 20px;
}

#severityLow{
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 4;
	grid-row-end: 5;
	padding-top: 20px;
}

#quantityCritical{
	grid-column-start: 6;
	grid-column-end: 7;
	grid-row-start: 5;
	grid-row-end: 6;
	text-align: center;
	padding-top: 20px;
}

#quantityHigh{
	grid-column-start: 5;
	grid-column-end: 6;
	grid-row-start: 5;
	grid-row-end: 6;
	text-align: center;
	padding-top: 20px;
}
#quantityMedium{
	grid-column-start: 4;
	grid-column-end: 5;
	grid-row-start: 5;
	grid-row-end: 6;
	text-align: center;
	padding-top: 20px;
}

#quantityLow{
	grid-column-start: 3;
	grid-column-end: 4;
	grid-row-start: 5;
	grid-row-end: 6;
	text-align: center;
	padding-top: 20px;
}

#riskMatrixContainer:nth-child(10){
	position: relative;
}

#riskMatrixSummary:nth-child(10){
	position: relative;
}

/* Color for each Risk */
#medium_medium, #medium_low, #low_medium{
	background-color: #ffc000;
}

#high_low, #high_medium, #high_high, #medium_high, #low_high{
	background-color: red;
}

#critical_low, #critical_medium, #critical_high, #critical_critical, #high_critical, #medium_critical, #low_critical{
	background-color: purple;
}


/* Low Risk */
#low_low{
	background-color: #548dd6;
	grid-column-start: 3;
	grid-column-end: 4;
	grid-row-start: 4;
	grid-row-end: 5;
}

/* Medium Risk */
#medium_low{
	grid-column-start: 3;
	grid-column-end: 4;
	grid-row-start: 3;
	grid-row-end: 4;
}
#medium_medium{
	grid-column-start: 4;
	grid-column-end: 5;
	grid-row-start: 3;
	grid-row-end: 4;
}
#low_medium{
	grid-column-start: 4;
	grid-column-end: 5;
	grid-row-start: 4;
	grid-row-end: 5;
}
/* ... */

